methods.basics.Methods.scala.error
Erreur de compilation :
Methods:11: error: not found: value reculte
  reculte(nbPas)
  ^