methods.basics.Methods.scala.code
var nbPas:Int = 0
def goAndGet() {
  
  while(!estSurBiscuit()){
    
    avance()
    nbPas += 1
    
  }
  
  reculte(nbPas)
  
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}